<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/iv11"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/joystick" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="18dp"
        android:text="@string/txtNombre" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/textView1"
        android:hint=""
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnAlta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUsuario"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/txtAlta" />

    <Button
        android:id="@+id/btnRanking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAlta"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/txtRanking" />

    <Button
        android:id="@+id/btnVolver1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRanking"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/txtVolver" />

</RelativeLayout>