<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <AbsoluteLayout
        android:id="@+id/absoluteLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/tictactoe" >

        <ImageView
            android:id="@+id/iv11"
            android:layout_width="64dp"
            android:layout_height="65dp"
            android:layout_x="28dp"
            android:layout_y="25dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/nada" />

        <ImageView
            android:id="@+id/iv12"
            android:layout_width="64dp"
            android:layout_height="65dp"
            android:layout_x="120dp"
            android:layout_y="25dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/nada" />

        <ImageView
            android:id="@+id/iv13"
            android:layout_width="64dp"
            android:layout_height="65dp"
            android:layout_x="210dp"
            android:layout_y="25dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/nada" />

        <ImageView
            android:id="@+id/iv21"
            android:layout_width="64dp"
            android:layout_height="65dp"
            android:layout_x="28dp"
            android:layout_y="115dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/nada" />

        <ImageView
            android:id="@+id/iv22"
            android:layout_width="64dp"
            android:layout_height="65dp"
            android:layout_x="120dp"
            android:layout_y="115dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/nada" />

        <ImageView
            android:id="@+id/iv23"
            android:layout_width="64dp"
            android:layout_height="65dp"
            android:layout_x="210dp"
            android:layout_y="115dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/nada" />

        <ImageView
            android:id="@+id/iv31"
            android:layout_width="64dp"
            android:layout_height="65dp"
            android:layout_x="28dp"
            android:layout_y="206dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/nada" />

        <ImageView
            android:id="@+id/iv32"
            android:layout_width="64dp"
            android:layout_height="65dp"
            android:layout_x="120dp"
            android:layout_y="206dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/nada" />

        <ImageView
            android:id="@+id/iv33"
            android:layout_width="64dp"
            android:layout_height="65dp"
            android:layout_x="210dp"
            android:layout_y="206dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/nada" />
    </AbsoluteLayout>

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:text="@string/txtVolver" />

    <Button
        android:id="@+id/btnReinicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/absoluteLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/txtReinicio" />

</RelativeLayout>